# tablepro-rebuild

./: .gitignore  README.md  pyproject.toml
examples/: seed_demo.py
tablepro/: __init__.py  cli.py  db.py  export.py  format.py  repl.py
tests/: test_tablepro.py
